# Smart_Eye_Lidar_Cam

./: .gitmodules  README.markdown  README.md  smart_eye_lidar_cam.service  start_all.sh
.catkin_tools/profiles/default/: devel_collisions.txt
FAST-LIVO2/config/: avia.yaml
common/: CMakeLists.txt
common/launch/: all.launch
common/msg/: ScanMapStatus.msg
common/script/: pub_sync_mcu.py
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/.private/common/: .catkin  _setup_util.py
devel/.private/driver_camera_hikvision/: .catkin  .rosinstall
devel/.private/fast_livo/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gi_v18b_imu_driver/: .catkin  .rosinstall
devel/.private/preprocess_module/: .catkin
devel/.private/vikit_common/: .catkin  .rosinstall  local_setup.sh
devel/.private/vikit_py/: .catkin  setup.sh
devel/.private/vikit_ros/: .catkin  .rosinstall  setup.sh
devel/include/common/: ScanMapStatus.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  common.pc  driver_camera_hikvision.pc  gi_v18b_imu_driver.pc  preprocess_module.pc  vikit_common.pc  vikit_py.pc  vikit_ros.pc
devel/lib/preprocess_module/: filter_imu.py
devel/lib/vikit_common/: test_vk_common_camera  test_vk_common_patch_score  test_vk_common_triangulation
gi_v18b_imu_driver/: CMakeLists.txt
gi_v18b_imu_driver/launch/: gi_v18b_imu.launch
gi_v18b_imu_driver/scripts/: test.py
logs/fast_livo/: build.cmake.000.log.stderr
logs/preprocess_module/: build.cmake.000.log.stderr
logs/vikit_common/: build.cmake.000.log.stderr
mediamtx_v1.13.0_linux_arm64/: mediamtx.yml  stream_cam.py
rpg_vikit/vikit_common/src/: pinhole_camera.cpp
rpg_vikit/vikit_ros/: CMakeLists.txt
src/FAST-LIVO2/: CMakeLists.txt
src/FAST-LIVO2/config/: camera_pinhole.yaml
src/FAST-LIVO2/include/: LIVMapper.h
src/FAST-LIVO2/launch/: mapping_avia.launch
src/FAST-LIVO2/src/: LIVMapper.cpp
src/common/: README.md  package.xml
src/common/script/: control_collect_map.py
src/driver_camera_hikvision/: CMakeLists.txt  README.md
src/driver_camera_hikvision/launch/: camera.launch
src/gi_v18b_imu_driver/: README.md
src/preprocess_module/: CMakeLists.txt  package.xml
src/preprocess_module/src/: filter_imu.py
(+74 files in other folders)
